--- a/public/index.html
+++ b/public/index.html
@@ -2,34 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" href="https://res.cloudinary.com/beneficio/image/upload/v1566482870/beneficio-ui-materials/kyjx2cetql9ymcos3g46.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <title>Twizzy</title>
+    <title>Beneficio</title>
 
     <meta name="description" content="A macOS app for Twitter DM & tweeting from the menu bar" />
-    <meta name="image" content="https://twizzy.app/social.jpg" />
-
-    <!-- {/* Item prop */} -->
-    <meta itemprop="name" content="Twizzy" />
-    <meta itemprop="description" content="A macOS app for Twitter DM & tweeting from the menu bar" />
-    <meta itemprop="image" content="https://twizzy.app/social.jpg" />
-
-    <!-- {/* Twitter */} -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Twizzy" />
-    <meta name="twitter:description" content="A macOS app for Twitter DM & tweeting from the menu bar" />
-    <meta name="twitter:site" content="@thekitze" />
-    <meta name="twitter:creator" content="@twizzyapp" />
-    <meta name="twitter:image:src" content="https://twizzy.app/social.jpg" />
-
-    <!-- {/* Facebook */} -->
-    <meta property="og:title" content="Twizzy" />
-    <meta property="og:description" content="A macOS app for Twitter DM & tweeting from the menu bar" />
-    <meta property="og:image" content="https://twizzy.app/social.jpg" />
-    <meta property="og:url" content="https://twizzy.app" />
-    <meta property="og:site_name" content="Twizzy" />
-    <meta property="og:type" content="website" />
 
     <style type="text/css">
       html {
